tocreatezipfile.txt
PS C:\Users\Ramachandra\OneDrive\Desktop\driver Model 1\dataset> python.exe
Python 3.9.19 (main, May  6 2024, 20:12:36) [MSC v.1916 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> import zipfile
>>> import zipfile("state-farm-distracted-driver-detection.zip")
  File "<stdin>", line 1
    import zipfile("state-farm-distracted-driver-detection.zip")
                  ^
SyntaxError: invalid syntax
>>> ref = zipfile.ZipFil(("state-farm-distracted-driver-detection.zip"))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: module 'zipfile' has no attribute 'ZipFil'
>>> ref = zipfile.ZipFile(("state-farm-distracted-driver-detection.zip"))
>>> ref.extractall()
